# anno

./: CLAUDE.md  Cargo.toml  LICENSE  README.md
src/: color.rs  display.rs  main.rs  types.rs
tests/: alignment_edge_case_test.rs  alignment_test.rs  comprehensive_test.rs  continuation_test.rs  error_annotation_test.rs  field_name_test.rs  skip_test.rs  type_annotation_test.rs
