[package]
name = "anno"
version = "0.1.0"
edition = "2024"

[dependencies]
argh = "0.1"
anyhow = "1.0"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Better optimization
strip = true        # Strip symbols
panic = "abort"     # Smaller panic handler
